exercicio pratico de javascript

--- a/ex07/script015.html
+++ b/ex07/script015.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>hora do dia</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body onload="carregar()">
+     <h1>
+            Hora do dia
+        </h1>
+    <section>
+       
+        <div id="msg">
+           aqui vai aparecer a mensagem
+        </div>
+
+        <div id="foto">
+            <img id="imagem" src="manhã.webp" alt="hora do dia">
+        </div>
+        <div id="saudacao">
+            aqui vai aparecer a mensagem
+        </div>
+    </section>
+     <footer>
+        <p>&copy;dev.japa_</p>
+    </footer>
 </body>
+<script src="script.js"></script>
 </html>
